2007-04-12  John Peacock <jpeacock@cpan.org>

	Output the original string form for numeric versions for XS code now.
	Ready to release to CPAN.

2007-04-12  John Peacock <jpeacock@cpan.org>

	It will be less surprising to overload string comparisons (now that the
	default stringification is identical to the initializer) than it would be
	to not overload them.

2007-04-11  John Peacock <jpeacock@cpan.org>

	Better way to handle the undef initialization case.

2007-04-11  John Peacock <jpeacock@cpan.org>

	Disallow string comparisons with version objects.  Tests adjusted to use
	numeric comparisons only.

2007-04-11  John Peacock <jpeacock@cpan.org>

	Cache the original string used to initialize the version object and return
	that when stringifying.  Only works with pure Perl class for the moment.

2007-03-18  John Peacock <jpeacock@cpan.org>

	Add more text to README on v-string support.

2007-03-18  John Peacock <jpeacock@cpan.org>

	Now supports non-magical v-strings (Perl 5.6.0-5.8.0)!
	Polymorphic error messages from 5.6.0 onwards.

2007-03-10  John Peacock <jpeacock@cpan.org>

	Polymorphic error messages work everywhere except XS under 5.6.2. :(

2007-03-10  John Peacock <jpeacock@cpan.org>

	Polymorphic error messages now working (and tested) in pure Perl module.

2007-02-13  John Peacock <jpeacock@cpan.org>

	Don't need to explicitely specify the MAN3POD stuff, since EU::MM will now
	do that automatically (since the POD is mentioned in PM).
	Actually, magic v-strings came in at 5.8.1, not 5.8.0 (spotted in the
	bleadperl variant).

2007-02-12  John Peacock <jpeacock@cpan.org>

	Final 0.70 release to CPAN.

2007-02-08  John Peacock <jpeacock@cpan.org>

	Error out on malformed input 1._1 (Andy Armstrong <andy@hexten.net>).

2007-02-08  John Peacock <jpeacock@cpan.org>

	Backport bleadperl changes.

2007-02-08  John Peacock <jpeacock@cpan.org>

	Prepare for another alpha release to CPAN

2007-02-08  John Peacock <jpeacock@cpan.org>
