@@ -1,6 +1,6 @@
 ---
 name: version
-version: 0.72
+version: 0.7201
 author:
   - 'John Peacock E<lt>jpeacock@cpan.orgE<gt>'
 abstract: Perl extension for Version Objects
@@ -13,10 +13,10 @@ dynamic_config: 1
 provides:
   version:
     file: lib/version.pm
-    version: 0.72
+    version: 0.7201
   version::vxs:
     file: vutil/lib/version/vxs.pm
-    version: 0.72
+    version: 0.7201
 generated_by: Module::Build version 0.2807
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
