@@ -1,4 +1,4 @@
-version 0.72
+version 0.7201
 ==================================
 
 Provides the same version objects as included in Perl v5.9.x (and in the
@@ -10,12 +10,13 @@ in the core).  If you are testing 5.9.x, you must check out bleadperl in
 order to get the current changes (the CPAN release has no effect in
 bleadperl).
 
-Major changes in 0.72 - 2007-04-12
+Major changes in 0.7201 - 2007-04-13
 =====================================
 
 Default stringification for numeric versions is the same string as was
 passed to version->new(), on the principal of least surprise.  If you want
-a normalized numeric value, use $v->numify.
+a normalized numeric value, use $v->numify.  Includes return value of
+replacement UNIVERSAL::VERSION as well.
 
 Major changes in 0.71 - 2007-03-18
 =====================================
