@@ -387,25 +387,25 @@ trailing zeros to preserve the correct version value.
 
 =item * Stringification
 
-In order to mirror as much as possible the existing behavior of ordinary
-$VERSION scalars, the stringification operation will display differently,
-depending on whether the version was initialized as a L<Numeric Version>
-or L<Extended Version>.
+The default stringification for version objects returns exactly the same
+string as was used to create it, whether you used C<new()> or C<qv()>,
+with one exception.  The sole exception is if the object was created using
+C<qv()> and the initializer did not have two decimal places or a leading
+'v' (both optional), then the stringified form will have a leading 'v'
+prepended, in order to support round-trip processing.
 
-What this means in practice is that if the normal CPAN and Camel rules are
-followed ($VERSION is a floating point number with no more than 3 decimal
-points), the stringified output will be exactly the same as the string
-input.  There will be no visible difference, although the internal 
-representation will be different, and the L<Comparison operators> will 
-function using the internal coding.
+For example:
 
-If a version object is initialized using a L<Extended Version> form, then
-the stringified form will be the L<Normal Form>.  The $obj->normal
-operation can always be used to produce the L<Normal Form>, even if the
-version was originally a L<Numeric Version>.
+  Initialized as          Stringifies to
+  ==============          ==============
+  version->new("1.2")       1.2
+  version->new("v1.2")     v1.2
+  qv("1.2.3")               1.2.3
+  qv("v1.3.5")             v1.3.5
+  qv("1.2")                v1.2   ### exceptional case 
 
-  print $ver->stringify;    # prints v1.2.3.4
-  print $nver->stringify;   # prints 1.002
+See also L<UNIVERSAL::VERSION>, as this also returns the stringified form
+when used as a class method.
 
 =back
 
@@ -590,9 +590,9 @@ trailing (or leading) zeros, in the L<Version Normal> form.  For example,
 
 In addition to the version objects, this modules also replaces the core
 UNIVERSAL::VERSION function with one that uses version objects for its
-comparisons.  The return from this operator is always the numified form,
-and the warning message generated includes both the numified and normal
-forms (for clarity).
+comparisons.  The return from this operator is always the stringified form,
+but the warning message generated includes either the stringified form or
+the normal form, depending on how it was called.
 
 For example:
 
@@ -609,20 +609,29 @@ For example:
 
   print $Bar::VERSION; # prints 1.003005
 
-  eval "use CGI 10"; # some far future release
-  print $@; # prints "CGI version 10 (10.0.0) required..."
+  eval "use foo 10";
+  print $@; # prints "foo version 10 required..."
+  eval "use foo 1.3.5; # work in Perl 5.6.1 or better
+  print $@; # prints "foo version 1.3.5 required..."
+
+  eval "use bar 1.3.6";
+  print $@; # prints "bar version 1.3.6 required..."
+  eval "use bar 1.004"; # note numeric version
+  print $@; # prints "bar version 1.004 required..."
+
 
 IMPORTANT NOTE: This may mean that code which searches for a specific
 string (to determine whether a given module is available) may need to be
-changed.
+changed.  It is always better to use the built-in comparison implicit in
+C<use> or C<require>, rather than manually poking at C<class->VERSION>
+and then doing a comparison yourself.
 
 The replacement UNIVERSAL::VERSION, when used as a function, like this:
 
   print $module->VERSION;
 
-will also exclusively return the numified form.  Technically, the 
-$module->VERSION function returns a string (PV) that can be converted to a 
-number following the normal Perl rules, when used in a numeric context.
+will also exclusively return the stringified form.  See L<Stringification>
+for more details.
 
 =head1 SUBCLASSING
 
